[package]
name = "xeno-lsp-framework"
description = "Asynchronous Language Server Protocol (LSP) framework based on tower"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
client-monitor = ["dep:waitpid-any", "dep:rustix", "dep:xeno-worker"]
omni-trait = []
stdio = ["dep:rustix", "rustix?/fs", "tokio/net"]
forward = []
tokio = []
# Position conversion utilities (requires ropey)
position = ["dep:ropey", "dep:xeno-primitives"]

[dependencies]
lsp-types.workspace = true
pin-project-lite.workspace = true
ropey = { workspace = true, optional = true }
rustix = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "io-util", "macros"] }
tower-layer.workspace = true
tower-service.workspace = true
tracing.workspace = true
url.workspace = true
waitpid-any = { workspace = true, optional = true }
xeno-primitives = { workspace = true, optional = true }
xeno-rpc.workspace = true
xeno-worker = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "process", "rt", "test-util", "time"] }

[lints]
workspace = true
