[package]
name = "xeno-macros"
description = "Procedural macros for Xeno editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
kdl = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
xeno-keymap-parser.workspace = true

[lints]
workspace = true
