[package]
name = "evildoer-manifest"
description = "Extension manifest and registry definitions for Evildoer editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
evildoer-base.workspace = true
evildoer-keymap.workspace = true
evildoer-macro.workspace = true
evildoer-registry.workspace = true
futures.workspace = true
linkme.workspace = true
paste.workspace = true
ropey.workspace = true
serde.workspace = true
strsim.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
evildoer-stdlib.workspace = true
