[package]
name = "xeno-matcher"
description = "Fast fuzzy matching via SIMD smith waterman, similar algorithm to FZF/FZY"
license = "MIT"
version.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = ["parallel_sort"]
incremental = []
serde = ["dep:serde"]
parallel_sort = ["dep:rayon"]

[dependencies]
multiversion = "0.8"
rayon = { version = "1.11", optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "matcher"
harness = false

[lints]
workspace = true
