[package]
name = "xeno-nu"
description = "Shared Nu script sandbox and evaluation helpers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nu-cmd-lang.workspace = true
nu-engine = { workspace = true }
nu-parser.workspace = true
nu-protocol.workspace = true
xeno-invocation = { workspace = true, features = ["nu"] }

[dev-dependencies]
tempfile.workspace = true

[lints.rust]
unused_crate_dependencies = "warn"
