[package]
name = "xeno-primitives"
description = "Basic editing primitives"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["xeno-tui"]
xeno-tui = ["dep:xeno-tui"]

[dependencies]
ropey.workspace = true
serde.workspace = true
smallvec.workspace = true
termina.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
xeno-keymap-parser.workspace = true
xeno-tui = { workspace = true, optional = true }

[lints]
workspace = true
