[package]
name = "xeno-registry-spec"
version.workspace = true
edition.workspace = true
description = "Domain specs and feature-gated build logic for xeno-registry"
license.workspace = true

[features]
default = []
compile = ["dep:nuon", "dep:nu-protocol", "dep:postcard", "dep:walkdir"]

[dependencies]
nu-protocol = { workspace = true, optional = true }
nuon = { workspace = true, optional = true }
postcard = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
walkdir = { version = "2", optional = true }
