[package]
name = "xeno-registry-spec"
version.workspace = true
edition.workspace = true
description = "Domain specs and feature-gated build logic for xeno-registry"
license.workspace = true

[features]
default = []
compile = ["dep:xeno-nu-nuon", "dep:xeno-nu-protocol", "dep:postcard", "dep:walkdir"]

[dependencies]
postcard = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
walkdir = { version = "2", optional = true }
xeno-nu-nuon = { workspace = true, optional = true }
xeno-nu-protocol = { workspace = true, optional = true }
