[package]
name = "xeno-registry"
description = "Registry-first organization extensions"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["full"]

full = [
    "db",
    "keymap",
    "config-kdl",
    "config-nuon",
    "config-nu",
    "actions-builtins",
    "commands-builtins",
    "motions-builtins",
    "textobj-builtins",
    "options-builtins",
    "themes-builtins",
    "statusline-builtins",
    "gutter-builtins",
    "hooks-builtins",
    "notifications-builtins",
    "languages-builtins",
]

minimal = ["actions", "commands", "motions", "textobj", "options", "themes", "languages"]

db = ["dep:tracing"]
keymap = ["db", "actions", "dep:xeno-keymap-core"]

# Domain type gates
actions = [
    "dep:ropey",
    "dep:xeno-primitives",
    "dep:xeno-macros",
    "notifications",
    "options",
    "textobj",
]
commands = ["motions", "notifications", "textobj"]
motions = ["dep:regex", "dep:ropey", "dep:xeno-primitives"]
textobj = ["dep:ropey", "dep:xeno-primitives", "motions"]
options = ["dep:strsim", "dep:xeno-macros"]
themes = ["dep:strsim", "dep:xeno-primitives"]
statusline = []
gutter = ["dep:ropey", "themes"]
hooks = ["dep:tracing", "dep:xeno-macros", "dep:xeno-primitives"]
notifications = []
languages = []

# Builtins gates
actions-builtins = ["actions"]
commands-builtins = ["commands"]
motions-builtins = ["motions"]
textobj-builtins = ["textobj"]
options-builtins = ["options"]
themes-builtins = ["themes"]
statusline-builtins = ["statusline"]
gutter-builtins = ["gutter"]
hooks-builtins = ["hooks"]
notifications-builtins = ["notifications"]
languages-builtins = ["languages"]

# Config KDL parsing
config-kdl = ["dep:kdl", "themes", "options"]
config-nuon = [
    "config-kdl",
    "dep:nu-engine",
    "dep:nu-protocol",
    "dep:nuon",
    "themes",
    "options",
]
config-nu = ["config-nuon", "dep:nu-parser", "dep:nu-cmd-lang"]

# Contract enforcement
registry-contracts = []

# Preserve legacy knobs
actions-handler-coverage = ["actions-builtins"]

[dependencies]
arc-swap = { workspace = true }
bitflags = { workspace = true }
inventory.workspace = true
kdl = { workspace = true, optional = true }
nu-cmd-lang = { workspace = true, optional = true }
nu-engine = { workspace = true, optional = true, features = ["os"] }
nu-parser = { workspace = true, optional = true }
nu-protocol = { workspace = true, optional = true }
nuon = { workspace = true, optional = true }
parking_lot.workspace = true
paste.workspace = true
postcard.workspace = true
regex = { workspace = true, optional = true }
ropey = { workspace = true, optional = true }
rustc-hash = { workspace = true }
serde.workspace = true
strsim = { workspace = true, optional = true }
thiserror.workspace = true
tracing = { workspace = true, optional = true }
xeno-keymap-core = { workspace = true, optional = true }
xeno-macros = { workspace = true, optional = true }
xeno-primitives = { workspace = true, optional = true }
xeno-registry-spec = { workspace = true }

[build-dependencies]
xeno-registry-spec = { workspace = true, features = ["compile"] }

[lints]
workspace = true
