[package]
name = "xeno-registry"
description = "Registry-first organization extensions"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["full"]

full = [
    "db",
    "keymap",
    "config-nuon",
    "config-nu",
    "actions-builtins",
    "commands-builtins",
    "motions-builtins",
    "textobj-builtins",
    "options-builtins",
    "themes-builtins",
    "statusline-builtins",
    "gutter-builtins",
    "hooks-builtins",
    "notifications-builtins",
    "languages-builtins",
]

minimal = ["actions", "commands", "motions", "textobj", "options", "themes", "languages"]

db = [
    "dep:inventory",
    "dep:parking_lot",
    "dep:paste",
    "dep:tracing",
    "actions",
    "commands",
    "motions",
    "textobj",
    "options",
    "themes",
    "statusline",
    "gutter",
    "hooks",
    "notifications",
    "languages",
]
keymap = ["db", "actions", "dep:xeno-keymap-core"]

# Domain type gates
actions = [
    "db",
    "dep:ropey",
    "dep:xeno-primitives",
    "dep:xeno-macros",
    "notifications",
    "options",
    "textobj",
]
commands = ["db", "motions", "notifications", "textobj"]
motions = ["db", "dep:regex", "dep:ropey", "dep:xeno-primitives"]
textobj = ["db", "dep:ropey", "dep:xeno-primitives", "motions"]
options = ["db", "dep:strsim", "dep:xeno-macros"]
themes = ["db", "dep:strsim", "dep:xeno-primitives"]
statusline = ["db"]
gutter = ["db", "dep:ropey", "themes"]
hooks = ["db", "dep:tracing", "dep:xeno-macros", "dep:xeno-primitives"]
notifications = ["db"]
languages = ["db"]

# Builtins gates
actions-builtins = ["actions"]
commands-builtins = ["commands"]
motions-builtins = ["motions"]
textobj-builtins = ["textobj"]
options-builtins = ["options"]
themes-builtins = ["themes"]
statusline-builtins = ["statusline"]
gutter-builtins = ["gutter"]
hooks-builtins = ["hooks"]
notifications-builtins = ["notifications"]
languages-builtins = ["languages"]

# Config NUON parsing
config-nuon = [
    "dep:xeno-nu-engine",
    "dep:xeno-nu-protocol",
    "dep:xeno-nu-nuon",
    "dep:xeno-primitives",
    "dep:xeno-invocation-spec",
    "xeno-invocation/nu",
    "themes",
    "options",
]
config-nu = ["config-nuon", "dep:xeno-nu-sandbox"]

# Contract enforcement
registry-contracts = []

# Preserve legacy knobs
actions-handler-coverage = ["actions-builtins"]

[dependencies]
arc-swap = { workspace = true }
bitflags = { workspace = true }
inventory = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
paste = { workspace = true, optional = true }
postcard.workspace = true
regex = { workspace = true, optional = true }
ropey = { workspace = true, optional = true }
rustc-hash = { workspace = true }
serde.workspace = true
strsim = { workspace = true, optional = true }
thiserror.workspace = true
tracing = { workspace = true, optional = true }
xeno-invocation = { workspace = true }
xeno-invocation-spec = { workspace = true, optional = true }
xeno-keymap-core = { workspace = true, optional = true }
xeno-macros = { workspace = true, optional = true }
xeno-nu-engine = { workspace = true, optional = true }
xeno-nu-nuon = { workspace = true, optional = true }
xeno-nu-protocol = { workspace = true, optional = true }
xeno-nu-sandbox = { workspace = true, optional = true }
xeno-primitives = { workspace = true, optional = true }
xeno-registry-spec = { workspace = true }

[build-dependencies]
xeno-registry-spec = { workspace = true, features = ["compile"] }

[lints]
workspace = true
