[package]
name = "xeno-registry"
description = "Registry-first organization extensions"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["full"]

full = [
    "minimal",
    "keymap",
    "config-nuon",
    "config-nu",
    "actions-builtins",
    "commands-builtins",
    "motions-builtins",
    "textobj-builtins",
    "options-builtins",
    "themes-builtins",
    "statusline-builtins",
    "gutter-builtins",
    "hooks-builtins",
    "notifications-builtins",
    "languages-builtins",
]

minimal = [
    "dep:inventory",
    "dep:parking_lot",
    "dep:paste",
    "dep:tracing",
    "actions",
    "commands",
    "motions",
    "textobj",
    "options",
    "themes",
    "statusline",
    "gutter",
    "hooks",
    "notifications",
    "languages",
]
keymap = ["minimal", "actions", "dep:xeno-keymap-core"]

# Domain type gates
actions = [
    "minimal",
    "dep:ropey",
    "dep:xeno-primitives",
    "dep:xeno-macros",
    "notifications",
    "options",
    "textobj",
]
commands = ["minimal", "motions", "notifications", "textobj"]
motions = ["minimal", "dep:regex", "dep:ropey", "dep:xeno-primitives"]
textobj = ["minimal", "dep:ropey", "dep:xeno-primitives", "motions"]
options = ["minimal", "dep:strsim", "dep:xeno-macros"]
themes = ["minimal", "dep:strsim", "dep:xeno-primitives"]
statusline = ["minimal"]
gutter = ["minimal", "dep:ropey", "themes"]
hooks = ["minimal", "dep:xeno-macros", "dep:xeno-primitives"]
notifications = ["minimal"]
languages = ["minimal"]

# Builtins gates
actions-builtins = ["actions"]
commands-builtins = ["commands"]
motions-builtins = ["motions"]
textobj-builtins = ["textobj"]
options-builtins = ["options"]
themes-builtins = ["themes"]
statusline-builtins = ["statusline"]
gutter-builtins = ["gutter"]
hooks-builtins = ["hooks"]
notifications-builtins = ["notifications"]
languages-builtins = ["languages"]

# Config NUON parsing
config-nuon = [
    "dep:xeno-nu-api",
    "dep:xeno-nu-data",
    "dep:xeno-primitives",
    "dep:xeno-invocation-spec",
    "xeno-invocation/nu",
    "themes",
    "options",
]
config-nu = ["config-nuon"]

# Contract enforcement
registry-contracts = []

# Preserve legacy knobs
actions-handler-coverage = ["actions-builtins"]

[dependencies]
arc-swap = { workspace = true }
bitflags = { workspace = true }
inventory = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
paste = { workspace = true, optional = true }
postcard.workspace = true
regex = { workspace = true, optional = true }
ropey = { workspace = true, optional = true }
rustc-hash = { workspace = true }
serde.workspace = true
strsim = { workspace = true, optional = true }
thiserror.workspace = true
tracing = { workspace = true, optional = true }
xeno-invocation = { workspace = true }
xeno-invocation-spec = { workspace = true, optional = true }
xeno-keymap-core = { workspace = true, optional = true }
xeno-macros = { workspace = true, optional = true }
xeno-nu-api = { workspace = true, optional = true }
xeno-nu-data = { workspace = true, optional = true }
xeno-primitives = { workspace = true, optional = true }
xeno-registry-spec = { workspace = true }

[build-dependencies]
xeno-registry-spec = { workspace = true, features = ["compile"] }

[lints]
workspace = true
